[package]
name = "simple-registration"
version = "0.1.0"
edition = "2021"

[dependencies]
libsignal-core = { git = "https://github.com/signalapp/libsignal.git" }
libsignal-net = { git = "https://github.com/signalapp/libsignal.git" }
libsignal-net-chat = { git = "https://github.com/signalapp/libsignal.git" }
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git" }

libsignal-account-keys = { git = "https://github.com/signalapp/libsignal.git" }
# futures-util = { workspace = true }
# rand_core = { workspace = true }
# rand_chacha = { workspace = true }

zkgroup = { git = "https://github.com/signalapp/libsignal.git" }

tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
rand_core = "0.9"

futures-util = "0.3"
[patch.crates-io]
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
