[package]
name = "simple-registration"
version = "0.1.0"
edition = "2021"

[features]
default = []
# SECURE: Use real SGX sealing (requires x86_64 Linux with SGX)
sgx-secure = []
# INSECURE: Development-only stub (DO NOT USE IN PRODUCTION)
dev-insecure = []

[dependencies]
libsignal-core = { git = "https://github.com/signalapp/libsignal.git" }
libsignal-net = { git = "https://github.com/signalapp/libsignal.git" }
libsignal-net-grpc = { git = "https://github.com/signalapp/libsignal.git" }
libsignal-net-chat = { git = "https://github.com/signalapp/libsignal.git" }
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git" }
http = "1.3.1"

libsignal-account-keys = { git = "https://github.com/signalapp/libsignal.git" }
# futures-util = { workspace = true }
# rand_core = { workspace = true }
# rand_chacha = { workspace = true }

zkgroup = { git = "https://github.com/signalapp/libsignal.git" }

tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.21"
rand_core = "0.9"
rand = "0.9"

futures-util = "0.3"

# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid"] }
bincode = "1.3"

# Cryptography for address key derivation
hmac = "0.12"
sha2 = "0.10"

# SGX dependencies - only with sgx-secure feature
[target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dependencies]
sgx_tseal = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.6", optional = true }
sgx_types = { git = "https://github.com/apache/incubator-teaclave-sgx-sdk", tag = "v1.1.6", optional = true }
[patch.crates-io]
# When building libsignal, just use our forks so we don't end up with two different versions of the libraries.
curve25519-dalek = { git = "https://github.com/signalapp/curve25519-dalek", tag = "signal-curve25519-4.1.3" }
boring = { git = 'https://github.com/signalapp/boring', tag = 'signal-v4.18.0' }
boring-sys = { git = 'https://github.com/signalapp/boring', tag = 'signal-v4.18.0' }
tungstenite = { git = 'https://github.com/signalapp/tungstenite-rs', tag = 'signal-v0.27.0' }
